# ROOTPWA

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  PATCH.libpp.event  PATCH.libpp.lorentz  PATCH.libpp.matrix  README  README.markdown  README.md  compileBoostLibraries.sh  rootlogon.C  rootpwa.config  rootpwaDoxyfile.conf  setSvnProp.sh  setup.sh  setupExample.sh  setupExampleE18.sh  setupExampleLxplus.sh  setupThisDataDir.sh  setupThisProgDir.sh
amplitude/: 1-2++1+pi-_11_f11285=pi-_11_a11269=pi+_1_sigma.key  1-2-+1+pi-_11_f11285=pi-_11_a11269=pi+_1_sigma.key  5pi3pi2pi.key  5pi4pi2pi2pi.key  5pi4pi3pi.key  5piIsobarWhiteList.conf  BaryonWaveSet.key  BaryonWaveSetII.key  BaryonWaveSetIII.key  CMakeLists.txt  ampDiff.cc  ampIntegralMatrix.cc  ampIntegralMatrix.h  amplitudeName.cc  amplitudeName.h  amplitudeTreeHelper.cc  amplitudeTreeHelper.h  amplitudeTreeLeaf.cc  amplitudeTreeLeaf.h  angMomCoupl.cc  angMomCoupl.h  batchUtils.sh  calcAmplitudes.cc  calcAmplitudesForMassBin.sh  calcAmps.sh  calcIntegrals.cc  checkKeyFile.cc  convertAmpFilesInMassBins.sh  convertAmpToTree.C  convertEvtFilesInMassBins.sh  convertEvtToTree.C  convertTreeFilesInMassBins.sh  convertTreeToAmp.C  convertTreeToEvt.C  createDiffTree.C  createGraphDiagram.cc  decayGraph.hpp  decayTopology.cc  decayTopology.h  decayTopology2.cc  (+122 more)
cuda/: 1-2-+1+f21270_22_pi-.key  1260.1300.root  CMakeLists.txt  CudaComplex.h  benchmarkMemoryBandwidth.cu  bwig.cu  complex.cuh  complex.hpp  complexTest.cuh  cudaLikelihoodInterface.cu  cudaLikelihoodInterface.cuh  cudaLikelihoodInterface.h  cudaLikelihoodKernel.cu  cuda_helper.cu  cuda_helper.h  errors.c  helampltest.cc  helampltest.cuh  helampltestInterface.cu  helampltestInterface.cuh  helampltestKernel.cu  likelihoodInterface.cu  likelihoodInterface.cuh  likelihoodKernel.cu  log.txt  pwa_cuda.cu  pwa_cuda_kernel.cu  square.cu  templtest.cu  templtest_kernel.cu  testAmplitudeSpeed.cc  testComplexMemoryBandwidth.cu  testCuda.cu  testLikelihoodMockup.cc  textureReader.cuh  textureReader.hpp  treesum.cu
decayAmplitude/: CMakeLists.txt  ampDiff.cc  ampIntegralMatrix.cc  ampIntegralMatrix.h  ampIntegralMatrixMetadata.cc  ampIntegralMatrixMetadata.h  amplitudeTreeHelper.cc  amplitudeTreeLeaf.cc  calcAmplitudes.cc  calcAmplitudesForMassBin.sh  calcIntegrals.cc  checkKeyFile.cc  compareAmplitudeFiles.cc  convertAmpFilesInMassBins.sh  convertEvtFilesInMassBins.sh  convertTreeToEvt.C  createDiffTree.C  createGraphDiagram.cc  decayGraph.hpp  decayTopology.cc  decayTopology.h  diffractiveDissVertex.cc  diffractiveDissVertex.h  evtTreeHelper.cc  evtTreeHelper.h  fillUdstDataIntoMassBins_example.C  fsVertex.cc  fsVertex.h  generateWaveSet.cc  interactionVertex.cc  isobarAmplitude.cc  isobarAmplitude.h  isobarCanonicalAmplitude.cc  isobarDecayTopology.cc  isobarDecayTopology.h  isobarDecayVertex.cc  isobarHelicityAmplitude.cc  linkdef.h  massDependence.cc  massDependence.h  (+10 more)
fortran/: CMakeLists.txt  bw.f  bw_example.f  eps_k1.f  eps_k1p.f  eps_m.f  eps_mx.f  fortranRoutines.h
generators/: 3piDiffractive2004.conf  3pinDiffractive2008.conf  5piDiffractive2004.conf  Baryon2pi2008.conf  CMakeLists.txt  KKpipiDiffractive2008.conf  KpipiDiffractive2008.conf  README  TBWProductionAmp.cc  TBWProductionAmp.h  TDiffractivePhaseSpace.cc  TDiffractivePhaseSpace.h  TPWWeight.cc  TPWWeight.h  TPrimaryVertexGen.cc  TPrimaryVertexGen.h  TProductionAmp.cc  TProductionAmp.h  accumKinePlots.C  beamAndVertexGenerator.cc  beamAndVertexGenerator.h  breitWignerProductionAmp.cc  breitWignerProductionAmp.h  diffractivePhaseSpace.cc  diffractivePhaseSpace.h  doKineValidation.sh  doKineValidation_root.sh  doPlotWEvts.C  doPlotWEvts_Kpipi.C  dumpWeights.C  evtweight.cc  generator.cc  generator.h  generator.hpp  generatorManager.cc  generatorManager.h  generatorParameters.hpp  generatorPickerFunctions.cc  generatorPickerFunctions.h  generatorPickerFunctions.hpp  (+32 more)
keygen/: CMakeLists.txt  genKey.C  genKeyHelper.cc  genKeyHelper.h  genKey_5pi_crosscheck.C  genKey_Kpipi.C  genKey_Kpipi_WA3.C  keygen.C  makekey.C  makekey3.C  particleKey.cc  particleKey.h  rootlogon.C  testEvent4refl.evt  testEvents.evt  testEvents3.evt  testEvents30.evt  testEvents4.evt  testEvents_p2pi.evt  testEvents_pi0pi0pi-.evt  waveKey.cc  waveKey.h
partialWaveFit/: 5piMassDep.conf  5piMassDep.yaml  CMakeLists.txt  addIntegralsToFitResult.cc  calcCovMatrixForFitResult.cc  compareFitResultsIntegrals.cc  complexMatrix.cc  complexMatrix.h  eigenvectorLikelihoodSlices.cc  fitResult.cc  fitResult.h  likelihoodPointCalculator.cc  linkdef.h  partialWaveFitHelper.cc  partialWaveFitHelper.h  pwaLikelihood.cc  pwaLikelihood.h  pwaPlotter.h  pwafit.cc  pwaplots.cc  rootPwaLinkDef.h  stripIntegralsFromFitResult.cc
plotgui/: CMakeLists.txt  CompassPwaFileBase.cc  CompassPwaFileBase.h  CompassPwaFileFitResults.cc  CompassPwaFileFitResults.h  CompassPwaFileLoader.cc  CompassPwaFileLoader.h  CompassPwaFileNormIntegrals.cc  CompassPwaFileNormIntegrals.h  CompassPwaFileObject.cc  CompassPwaFileObject.h  CompassPwaFilePhaseSpaceIntegrals.cc  CompassPwaFilePhaseSpaceIntegrals.h  CompassPwaToRootParser_Notes.txt  FortranPwaFileBase.cc  FortranPwaFileBase.h  FortranPwaFileFitResults.cc  FortranPwaFileFitResults.h  FortranPwaFileNormIntegrals.cc  FortranPwaFileNormIntegrals.h  FortranPwaFileObject.cc  FortranPwaFileObject.h  FortranPwaFilePhaseSpaceIntegrals.cc  FortranPwaFilePhaseSpaceIntegrals.h  GuiFileListTreeModel.cc  GuiFileListTreeModel.h  GuiFileListTreeModelItem.cc  GuiFileListTreeModelItem.h  GuiOpenMultipleFilesDialog.cc  GuiOpenMultipleFilesDialog.h  GuiPwaMain.cc  GuiPwaMain.h  GuiStringTreeModel.cc  GuiStringTreeModel.h  GuiStringTreeModelItem.cc  GuiStringTreeModelItem.h  GuiWaveTreeModel.cc  GuiWaveTreeModel.h  GuiWaveTreeModelItem.cc  GuiWaveTreeModelItem.h  (+8 more)
pwa2000/: AMP_ves.eps  CMakeLists.txt  DISCLAIMER  README.markdown  libpp-src.7jul2005.tgz  pwa2000-src.7jul2005.tgz
pyInterface/: CMakeLists.txt  ampIntegralMatrix_py.cc  amplitudeBenchmark.py  amplitudeTreeLeaf_py.cc  amplitudeTreeLeaf_py.h  calcAmplitudes.py  (+54 more)
(+2418 files in other folders)
